@@ -1,0 +1,3 @@
+# Yoma Mobile :: Gotchas
+
+<- When you run into one, list it here ->
