@@ -18,12 +18,13 @@
     "env:test": "node env/generate.js test",
     "format": "prettier --write .",
     "help": "npx package-json-help.js",
-    "init": "npm-run-all env:dev init:ios",
+    "init": "npm i && npm-run-all env:dev init:ios",
     "init:ios": "npx pod-install",
     "ios": "react-native run-ios",
     "lint": "eslint .  --ignore-path .eslintignore",
     "lint:check": "npm run lint",
     "lint:fix": "npm run lint --fix",
+    "lint:markdown": "npx markdownlint */*.md",
     "npm:audit": "audit-ci --critical",
     "reset": "npx rimraf node_modules && npm i && npx pod-install",
     "start": "react-native start",
